# infrastructure_automation_toolkit

./: .gitignore  CHANGELOG.md  EXTRACTION_LOG.md  README.md  pyproject.toml
data/alerts/: alerts.json
data/metrics/: resource_metrics.json  system_metrics.json
examples/: complete_workflow.py  comprehensive_monitoring.py  infrastructure_monitoring.py
src/: __init__.py
src/alerts/: __init__.py  alert_manager.py
src/analysis/: __init__.py  optimizer.py
src/docker/: __init__.py  container_manager.py  manager.py
src/monitoring/: __init__.py  analyzer.py  resource_analyzer.py  resource_monitor.py  system_monitor.py
src/system/: __init__.py  health_check.py
tests/: test_alerts.py  test_analyzer.py  test_container_manager.py  test_docker_manager.py  test_health_check.py  test_optimizer.py  test_resource_analyzer.py  test_resource_monitor.py  test_system_monitor.py
