[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infrastructure-automation-toolkit"
version = "1.0.0"
description = "DevOps utilities for Docker/Podman management and system monitoring"
authors = [{name = "Cody Kickertz", email = "cody.kickertz@pm.me"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
docker = [
    "docker>=7.0.0",
]

dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "docker>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
